# JamomaMax

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  JamomaGitter.maxpat  README.md  TheGitter.maxpat  addToExtras.sh  all.rb  appveyor.yml  build.rb  build.sh  buildMaxClippings.rb  buildUserLibMaxClippings.rb  gitter.maxpat  gitterStandalone.maxpat  installer.rb  installerUserlib.rb  link.sh  makeAllSubmodulesWritable.rb  makeSubmoduleWritable.rb  manner.rb  newModule.rb  tag.rb  test.rb  test.sh  update.rb  versions.rb  yaml-to-maxref.rb
source/: CMakeLists.txt  How_to_add_new_external.rtf  Toolbox.applescript  overlap-for-fft.maxpat
source/English.lproj/: InfoPlist.strings  MainMenu.xib
source/Toolbox.xcodeproj/: project.pbxproj
source/allpass1~.model/: CMakeLists.txt  allpass1~.model.cpp  allpass1~.model.yml  allpass~.model.maxhelp
source/classwrapper/: MaxAudioGraph.cpp  MaxAudioGraph.h  MaxCommon.h  MaxGraph.cpp  MaxGraph.h  MaxObjectTypes.h  TTClassWrapperMax.cpp  TTClassWrapperMax.h  TTModularClassWrapperMax.cpp  TTModularClassWrapperMax.h
source/j.adsr=/: CMakeLists.txt  j.adsr.cpp
source/j.adsr_equal/: CMakeLists.txt  j.adsr.cpp
source/j.adsr≈/: j.adsr.cpp  j.adsr≈.yml
source/j.allpass~/: CMakeLists.txt  j.allpass~.cpp  j.allpass~.yml
source/j.append#/: j.append.cpp
source/j.append-/: CMakeLists.txt  j.append-.yml  j.append.cpp
source/j.array=/: CMakeLists.txt  j.array.cpp  j.array=.yml
source/j.array_equal/: CMakeLists.txt  j.array.cpp
source/j.array~/: CMakeLists.txt  j.array~.cpp  j.array~.yml
source/j.array≈/: j.array.cpp
source/j.audiounit=/: j.audiounit.cpp
source/j.audiounit≈/: j.audiounit.cpp  j.audiounit≈.yml
source/j.average=/: CMakeLists.txt  j.average.cpp
source/j.average_equal/: CMakeLists.txt  j.average.cpp
source/j.average~/: CMakeLists.txt  j.average~.cpp  j.average~.yml
source/j.average≈/: j.average.cpp  j.average≈.yml
source/j.balance~/: CMakeLists.txt  j.balance~.cpp  j.balance~.yml
source/j.clip=/: CMakeLists.txt  j.clip.cpp  j.clip=.yml
source/j.clip_equal/: CMakeLists.txt  j.clip.cpp
source/j.clip~/: CMakeLists.txt  j.clip~.cpp  j.clip~.yml
source/j.clip≈/: j.clip.cpp
source/j.count=/: CMakeLists.txt  j.count.cpp
source/j.count_equal/: CMakeLists.txt  j.count.cpp
source/j.count≈/: j.count.cpp  j.count≈.yml
source/j.cubicInterpolate/: CMakeLists.txt  j.cubicInterpolate.cpp  j.cubicInterpolate.sln  j.cubicInterpolate.vcproj  j.cubicInterpolate.yml
source/j.cue/: CMakeLists.txt  j.cue.cpp  j.cue.sln  j.cue.vcproj  j.cue.yml  j.state.sln  j.state.vcproj
source/j.dataspace/: j.dataspace.cpp  j.dataspace.maxref.yml  j.dataspace.yml
source/j.dataspace#/: j.dataspace.cpp
source/j.dataspace-/: j.dataspace-.yml  j.dataspace.cpp
source/j.dbap/: CMakeLists.txt  hull2D.cpp  hull2D.h  j.dbap.cpp  j.dbap.h  j.dbap.maxref.yml  j.dbap.vcproj  j.dbap.yml
source/j.dbapBformat/: j.dbapBformat.cpp  j.dbapBformat.h  j.dbapBformat.vcproj  j.dbapBformat.yml
source/j.dbap_bformat/: CMakeLists.txt  j.dbap_bformat.cpp  j.dbap_bformat.h  j.dbap_bformat.vcproj  j.dbap_bformat.yml
source/j.dcblock=/: CMakeLists.txt  j.dcblock.cpp  j.dcblock=.yml
source/j.dcblock_equal/: CMakeLists.txt  j.dcblock.cpp
source/j.dcblocker=/: j.dcblocker.cpp  j.dcblocker=.yml
source/j.dcblocker≈/: j.dcblocker.cpp
source/j.dcblock~/: CMakeLists.txt  j.dcblock~.cpp  j.dcblock~.yml
source/j.degrade=/: CMakeLists.txt  j.degrade.cpp
source/j.degrade_equal/: CMakeLists.txt  j.degrade.cpp  j.degrade=.yml
source/j.degrade~/: CMakeLists.txt  j.degrade~.cpp  j.degrade~.yml
source/j.degrade≈/: j.degrade.cpp
source/j.delay=/: CMakeLists.txt  j.delay.cpp
source/j.delay_equal/: CMakeLists.txt  j.delay.cpp  j.delay_equal.yml
source/j.delay~/: CMakeLists.txt  j.delay~.cpp  j.delay~.yml
source/j.delay≈/: j.delay.cpp
source/j.delta/: CMakeLists.txt  j.delta.cpp  j.delta.maxref.yml  j.delta.vcproj  j.delta.yml
source/j.envexp/: CMakeLists.txt  j.envexp.cpp  j.envexp.vcproj  j.envexp.yml
source/j.fft=/: CMakeLists.txt  j.fft.cpp
source/j.fft_equal/: CMakeLists.txt  j.fft.cpp
source/j.fft≈/: j.fft.cpp  j.fft≈.yml
source/j.filter=/: CMakeLists.txt  j.filter.cpp
source/j.filter_equal/: CMakeLists.txt  j.filter.cpp
source/j.filter~/: CMakeLists.txt  j.filter~.cpp  j.filter~.yml
source/j.filter≈/: filter-test.maxpat  j.filter.cpp  j.filter≈.yml
source/j.folder/: CMakeLists.txt  j.folder.cpp  j.folder.vcproj  j.folder.yml
source/j.function~/: CMakeLists.txt  j.function~.cpp  j.function~.yml
source/j.gain%/: j.gain%.yml  j.gain.cpp  j.max.gain.cpp
source/j.gain=/: CMakeLists.txt  j.gain.cpp
source/j.gain_equal/: CMakeLists.txt  j.gain.cpp
source/j.gain~/: CMakeLists.txt  j.gain~.cpp  j.gain~.yml
source/j.gain≈/: j.gain.cpp  j.gain≈.yml
source/j.gang/: CMakeLists.txt  j.gang.cpp  j.gang.vcproj  j.gang.yml
source/j.hilbert=/: CMakeLists.txt  j.hilbert.cpp
source/j.hilbert_equal/: CMakeLists.txt  j.hilbert.cpp
source/j.hilbert≈/: j.hilbert.cpp  j.hilbert≈.yml
source/j.hmlshelf~/: CMakeLists.txt  j.hmlshelf~.cpp  j.hmlshelf~.yml
source/j.hub/: j.hub.cpp  j.hub.h  j.hub.maxref.yml  j.hub.yml
source/j.in/: CMakeLists.txt  j.in.cpp  j.in.vcproj  j.in.yml
source/j.in=/: CMakeLists.txt  j.in=.cpp  j.in=.yml
source/j.in_equal/: CMakeLists.txt  j.in=.yml
source/j.info=/: CMakeLists.txt  j.info.cpp
source/j.info_equal/: CMakeLists.txt  j.info.cpp
source/j.info≈/: j.info.cpp  j.info≈.yml
source/j.init/: CMakeLists.txt  j.init.cpp  j.init.maxref.yml  j.init.vcproj  j.init.yml
source/j.in~/: CMakeLists.txt  j.in~.vcproj  j.in~.yml
source/j.iter#/: j.iter#.yml  j.iter.cpp
source/j.iter-/: CMakeLists.txt  j.iter.cpp
source/j.join=/: CMakeLists.txt  j.join.cpp
source/j.join_equal/: CMakeLists.txt  j.join.cpp  j.join_equal.yml
source/j.join≈/: j.join.cpp
source/j.limiter=/: CMakeLists.txt  j.limiter.cpp
source/j.limiter_equal/: CMakeLists.txt  j.limiter.cpp
source/j.limiter~/: CMakeLists.txt  j.limiter~.cpp  j.limiter~.yml
source/j.limiter≈/: j.limiter.cpp  (+1 more)
(+6064 files in other folders)
